--- a/python/abstracts/abstracts_experiments.ipynb
+++ b/python/abstracts/abstracts_experiments.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,27 +97,27 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Liposarcoma</td>\n",
-       "      <td>CDK4 Amplification</td>\n",
-       "      <td>CDK4 Amplification</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>male</td>\n",
-       "      <td>38</td>\n",
-       "      <td>adult</td>\n",
+       "      <th>30</th>\n",
+       "      <td>30</td>\n",
+       "      <td>Pancreatic adenocarcinoma</td>\n",
+       "      <td>RB1, TP53, KRAS</td>\n",
+       "      <td>RB1</td>\n",
+       "      <td>TP53</td>\n",
+       "      <td>KRAS</td>\n",
+       "      <td>female</td>\n",
+       "      <td>57</td>\n",
+       "      <td>aged</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   topic      disease                gene               gene1 gene2 gene3  \\\n",
-       "1      1  Liposarcoma  CDK4 Amplification  CDK4 Amplification               \n",
+       "    topic                    disease             gene gene1  gene2  gene3  \\\n",
+       "30     30  Pancreatic adenocarcinoma  RB1, TP53, KRAS   RB1   TP53   KRAS   \n",
        "\n",
-       "    sex age age_group  \n",
-       "1  male  38     adult  "
+       "       sex age age_group  \n",
+       "30  female  57      aged  "
       ]
      },
      "execution_count": 6,
@@ -126,7 +126,7 @@
     }
    ],
    "source": [
-    "TOPIC = 1\n",
+    "TOPIC = 30\n",
     "topic = topics_all[(topics_all.topic==TOPIC)]\n",
     "qrels = utils.qrels_of_topics(qrels_all, topic)\n",
     "topic"
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -147,10 +147,10 @@
     {
      "data": {
       "text/plain": [
-       "{'P_10': 0.5, 'Rprec': 0.3125, 'ndcg': 0.7419, 'recall_1000': 0.9375}"
+       "{'recall_1000': 0.6132, 'ndcg': 0.4755, 'Rprec': 0.2642, 'P_10': 0.2}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,10 +181,154 @@
     {
      "data": {
       "text/plain": [
-       "{'26084847', '26573603', '26962163'}"
+       "{'10029438',\n",
+       " '10076772',\n",
+       " '11102889',\n",
+       " '11180876',\n",
+       " '11753042',\n",
+       " '12174924',\n",
+       " '12175546',\n",
+       " '15069678',\n",
+       " '15473338',\n",
+       " '15608367',\n",
+       " '16170025',\n",
+       " '16995472',\n",
+       " '1983826',\n",
+       " '21894048',\n",
+       " '23344532',\n",
+       " '25216706',\n",
+       " '25823825',\n",
+       " '26590425',\n",
+       " '26940582',\n",
+       " '27183870',\n",
+       " '27281208',\n",
+       " '27461834',\n",
+       " '27571409',\n",
+       " '7559078',\n",
+       " '7642971',\n",
+       " '7874757',\n",
+       " '7902444',\n",
+       " '8178941',\n",
+       " '8283078',\n",
+       " '9209954',\n",
+       " '9241070',\n",
+       " '9626473',\n",
+       " '9658319',\n",
+       " '9661918',\n",
+       " '9820739',\n",
+       " '9888666',\n",
+       " 'AACR_2012-1829',\n",
+       " 'AACR_2015-4741',\n",
+       " 'AACR_2017-1391',\n",
+       " 'ASCO_193758-199',\n",
+       " 'ASCO_54010-74'}"
       ]
      },
      "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "run_set = set(run[(run.TOPIC_NO==TOPIC)].ID)\n",
+    "qrels_set = set(qrels[(qrels.relev.isin([2]))].doc_id)\n",
+    "qrels_set.difference(run_set)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RUN: imi_mug_abst TOPICS: 1\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'recall_1000': 0.6132, 'ndcg': 0.4759, 'Rprec': 0.2642, 'P_10': 0.2}"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "run_params = {\n",
+    "    'run_id':'imi_mug_abst',\n",
+    "    'query_template':'tests/imi_mug_abs10.json',\n",
+    "}\n",
+    "\n",
+    "run, run_params = running.run(topic, 'ABSTRACTS', run_params)\n",
+    "results, aggregated = evaluation.evaluate(qrels[(qrels.relev.isin([2]))], run)\n",
+    "aggregated"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Check relevant documents missed and why (for topic 2 for example)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'10029438',\n",
+       " '10076772',\n",
+       " '11102889',\n",
+       " '11180876',\n",
+       " '11753042',\n",
+       " '12174924',\n",
+       " '12175546',\n",
+       " '15069678',\n",
+       " '15473338',\n",
+       " '15608367',\n",
+       " '16170025',\n",
+       " '16995472',\n",
+       " '1983826',\n",
+       " '21894048',\n",
+       " '21945955',\n",
+       " '23344532',\n",
+       " '25216706',\n",
+       " '25823825',\n",
+       " '26590425',\n",
+       " '26940582',\n",
+       " '27183870',\n",
+       " '27281208',\n",
+       " '27461834',\n",
+       " '27571409',\n",
+       " '7559078',\n",
+       " '7642971',\n",
+       " '7874757',\n",
+       " '7902444',\n",
+       " '8178941',\n",
+       " '8283078',\n",
+       " '9209954',\n",
+       " '9241070',\n",
+       " '9626473',\n",
+       " '9658319',\n",
+       " '9661918',\n",
+       " '9820739',\n",
+       " '9888666',\n",
+       " 'AACR_2012-1829',\n",
+       " 'AACR_2017-1391',\n",
+       " 'ASCO_122516-143',\n",
+       " 'ASCO_193758-199',\n",
+       " 'ASCO_54010-74'}"
+      ]
+     },
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,15 +444,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "EXPERIMENT BEGIN: 2018-08-01 15:53:32.948831\n",
+      "EXPERIMENT BEGIN: 2018-08-05 17:25:43.713796\n",
       "RUNS: 2\n",
       "1\n",
-      "RUN: variable/baseline_sex_age.json-0.4-best_fields-1.5-0.4-cross_fields-1 TOPICS: 30\n",
-      "('variable/baseline_sex_age.json', 0.544, 0.52, 0.2817, '0.4', 'best_fields', '1.5', '0.4', 'cross_fields', '1')\n",
+      "RUN: variable/baseline_sex_age_all_fields.json-0.4-best_fields-1.5-0.4-cross_fields-1 TOPICS: 30\n",
+      "('variable/baseline_sex_age_all_fields.json', 0.5409, 0.5033, 0.2688, '0.4', 'best_fields', '1.5', '0.4', 'cross_fields', '1')\n",
       "2\n",
-      "RUN: variable/baseline_sex_age.json-0.4-best_fields-1.5-0.5-cross_fields-1 TOPICS: 30\n",
-      "('variable/baseline_sex_age.json', 0.5435, 0.52, 0.2813, '0.4', 'best_fields', '1.5', '0.5', 'cross_fields', '1')\n",
-      "EXPERIMENT END: 2018-08-01 15:54:05.279265\n"
+      "RUN: variable/baseline_sex_age_all_fields.json-0.4-best_fields-1.5-0.5-cross_fields-1 TOPICS: 30\n",
+      "('variable/baseline_sex_age_all_fields.json', 0.5375, 0.4833, 0.2703, '0.4', 'best_fields', '1.5', '0.5', 'cross_fields', '1')\n",
+      "EXPERIMENT END: 2018-08-05 17:26:23.565487\n"
      ]
     },
     {
@@ -347,10 +491,10 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>variable/baseline_sex_age.json</td>\n",
-       "      <td>0.5440</td>\n",
-       "      <td>0.52</td>\n",
-       "      <td>0.2817</td>\n",
+       "      <td>variable/baseline_sex_age_all_fields.json</td>\n",
+       "      <td>0.5409</td>\n",
+       "      <td>0.5033</td>\n",
+       "      <td>0.2688</td>\n",
        "      <td>0.4</td>\n",
        "      <td>best_fields</td>\n",
        "      <td>1.5</td>\n",
@@ -360,10 +504,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>variable/baseline_sex_age.json</td>\n",
-       "      <td>0.5435</td>\n",
-       "      <td>0.52</td>\n",
-       "      <td>0.2813</td>\n",
+       "      <td>variable/baseline_sex_age_all_fields.json</td>\n",
+       "      <td>0.5375</td>\n",
+       "      <td>0.4833</td>\n",
+       "      <td>0.2703</td>\n",
        "      <td>0.4</td>\n",
        "      <td>best_fields</td>\n",
        "      <td>1.5</td>\n",
@@ -376,13 +520,13 @@
        "</div>"
       ],
       "text/plain": [
-       "                         template    ndcg  P_10   Rprec dis_tb  dis_mm_type  \\\n",
-       "0  variable/baseline_sex_age.json  0.5440  0.52  0.2817    0.4  best_fields   \n",
-       "1  variable/baseline_sex_age.json  0.5435  0.52  0.2813    0.4  best_fields   \n",
+       "                                    template    ndcg    P_10   Rprec dis_tb  \\\n",
+       "0  variable/baseline_sex_age_all_fields.json  0.5409  0.5033  0.2688    0.4   \n",
+       "1  variable/baseline_sex_age_all_fields.json  0.5375  0.4833  0.2703    0.4   \n",
        "\n",
-       "  dis_b gene_tb  gene_mm_type gene_b  \n",
-       "0   1.5     0.4  cross_fields      1  \n",
-       "1   1.5     0.5  cross_fields      1  "
+       "   dis_mm_type dis_b gene_tb  gene_mm_type gene_b  \n",
+       "0  best_fields   1.5     0.4  cross_fields      1  \n",
+       "1  best_fields   1.5     0.5  cross_fields      1  "
       ]
      },
      "execution_count": 5,
@@ -392,7 +536,7 @@
    ],
    "source": [
     "experiment_params_grid = {\n",
-    "    'query_template':['variable/baseline_sex_age.json'],\n",
+    "    'query_template':['variable/baseline_sex_age_all_fields.json'],\n",
     "    'disease_tie_breaker':[0.4],\n",
     "    'disease_multi_match_type':['best_fields'],\n",
     "    'disease_boost':[1.5],\n",
@@ -607,7 +751,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
